src/pages/Home.css
body:has(.grid-container--home) {
	background-image: url(/home/background-home-mobile.jpg);
	background-size: cover;
	background-position: bottom center;
}

@media (min-width: 35em) {
	body:has(.grid-container--home) {
		background-image: url(/home/background-home-tablet.jpg);
		background-position: center center;
	}
}

@media (min-width: 45em) {
	body:has(.grid-container--home) {
		background-image: url(/home/background-home-desktop.jpg);
	}
}

.grid-container--home > *:last-child {
	place-self: center;
}

@media (min-width: 45em) {
	.grid-container {
		grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
				1rem,
				1fr
			);
	}

	.grid-container--home > *:first-child {
		grid-column: 2;
	}

	.grid-container--home > *:last-child {
		grid-column: 3;
	}

	.grid-container--home {
		/* TODO: too much bottom padding, not enough top padding */
		padding-bottom: max(6rem, 15vh);
		align-items: end;
		/* TODO: article and explore button need wider horiz gap btwn them */
	}
}

.grid-container--home h1 > span {
	line-height: 1.5;
}

.large-button {
	position: relative;
	z-index: 1;
	display: inline-grid;
	place-items: center;
	padding: 0 2em;
	border-radius: 50%;
	aspect-ratio: 1;
	text-decoration: none;
	font-size: 2rem;
}

/* https://tobiasahlin.com/blog/how-to-animate-box-shadow/ */
.large-button::after {
	content: '';
	position: absolute;
	z-index: -1;
	width: 100%;
	height: 100%;
	background: hsl(var(--clr-white) / 0.15);
	border-radius: 50%;
	opacity: 0;
	transition: opacity 400ms ease-out, transform 100ms ease-out;
}

.large-button:is(:hover, :focus)::after {
	opacity: 1;
	transform: scale(1.5);
}

